src/Tests/Error/NotEqualsError.php
<?php

namespace ColdBolt\Tests\Error;

use ColdBolt\Tests\Error\AssertError;

class NotEqualsError extends AssertError
{
}
